2019-04-27  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (%in_index_commands, %brace_commands):
	Add 'seeentry', 'seealso'.  These are handled the same way as 
	'sortas'.
	* tp/Texinfo/ParserNonXS.pm (%command_ignore_space_after):
	Add 'seeentry', 'seealso'.
	(_parse_texi) <close brace>: Record values of 'seeentry' and 
	'seealso' in extra hash the same way as for 'sortas'.
	(_enter_index_entry): Skip the index entry if there is a 
	'seeentry' or 'seealso' directive.
	* tp/Texinfo/Convert/Plaintext.pm (_convert): Do not warn about 
	unhandled commands if a 'seeentry' or 'seealso' directive is 
	present.

	* tp/t/09indices.t (seeentry): Add test.

2019-04-21  Gavin Smith  <gavinsmith0123@gmail.com>

	Remove TOP_NODE_FILE.

	* doc/texinfo.texi (HTML Customization Variables): Remove 
	TOP_NODE_FILE.
	* tp/Texinfo/Common.pm (@variable_string_settables):
	Remove TOP_NODE_FILE.
	* tp/Texinfo/Convert/Converter.pm (_top_node_filename):
	Do not look at TOP_NODE_FILE.
	* tp/Texinfo/Convert/HTML.pm (%defaults): Use TOP_FILE instead 
	of TOP_NODE_FILE.
	(_set_variables_texi2html): Do not override value of TOP_FILE to 
	an empty string.
	* tp/init/chm.pm: Do not try to set TOP_NODE_FILE.

2019-04-03  Patrice Dumas  <pertusus@free.fr>

	Use EXTENSION instead of hardcoding html and add extension to TOP_NODE_FILE_TARGET

	* tp/Texinfo/Convert/Converter.pm (_top_node_filename),
	tp/Texinfo/Convert/HTML.pm (_set_root_commands_targets_node_files):
	use EXTENSION instead of .html.
	* tp/Texinfo/Convert/HTML.pm (%defaults, _external_node_href),
	doc/texinfo.texi (TOP_NODE_FILE_TARGET): default is now index.html.
	* tp/Texinfo/Convert/HTML.pm (_external_node_href): use 
	$external_file_extension instead of $extension to make clear that
	it is not the same as EXTENSION.
	* tp/t/init/t2h_singular.init (t2h_node_file_name): add that 
	function to replace .htm with .html for node files.
	* tp/tests/tex_html/list-of-tests: update to match SHORTEXTN 
	removal.
