@@ -309,6 +309,8 @@ CM_samp,
 CM_sansserif,
 CM_sc,
 CM_section,
+CM_seealso,
+CM_seeentry,
 CM_set,
 CM_setchapternewpage,
 CM_setcontentsaftertitlepage,
